WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
237526
[GStreamer] Handle gst pad error as format error
https://bugs.webkit.org/show_bug.cgi?id=237526
Summary
[GStreamer] Handle gst pad error as format error
Enrique Ocaña
Reported
2022-03-07 05:58:35 PST
Errors in GstPads are currently unreported, but should be reported as GST_CORE_ERROR to the upper layer.
Attachments
Patch
(1.88 KB, patch)
2022-03-07 06:35 PST
,
Enrique Ocaña
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrique Ocaña
Comment 1
2022-03-07 06:35:18 PST
Created
attachment 453973
[details]
Patch
EWS
Comment 2
2022-03-08 04:23:03 PST
Committed
r290984
(
248162@main
): <
https://commits.webkit.org/248162@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 453973
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-03-08 04:24:15 PST
<
rdar://problem/89961047
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug