[GStreamer] Handle gst pad error as format error https://bugs.webkit.org/show_bug.cgi?id=237526

Reviewed by Xabier Rodriguez-Calvar.

This patch is authored by Eugene Mutavchi <Ievgen_Mutavchi@comcast.com>
See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/797

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:



Canonical link: https://commits.webkit.org/248162@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290984 268f45cc-cd09-0410-ab3c-d52691b4dbfc